// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match the snapshot 1`] = `
<section
  className=""
>
  <header>
    <p>
       #
      11
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon medium"
      >
        flag
      </i>
      Priority: 
      medium
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon"
      >
        drafts
      </i>
      Opened: 
      2019-06-16
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon"
      >
        access_time
      </i>
      34 days since ticket opened
    </p>
  </header>
  <p
    className="card-notes"
  >
    Notes: 
    Ut enim
  </p>
</section>
`;

exports[`Card should match the snapshot if a resource is passed as props 1`] = `
<section
  className=""
>
  <header>
    <p>
       #
      1
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon Bright Tank 1"
      >
        business
      </i>
      Name: 
      Bright Tank 1
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon Bright Tank 1"
      >
        business
      </i>
      Cost: 
      5000
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon"
      >
        drafts
      </i>
      Opened: 
      2019-07-16
    </p>
    <p
      className="header-icon-container"
    >
      <i
        className="material-icons header-icon"
      >
        access_time
      </i>
      3 days since ticket opened
    </p>
    <Link
      to={
        Object {
          "pathname": "/resources/parts",
          "state": Object {
            "resourceId": 1,
          },
        }
      }
    >
      <i
        className="material-icons"
      >
        more_horiz
      </i>
    </Link>
  </header>
</section>
`;
